Updated dockerfile to use caching

--- a/session-1/script-container/Dockerfile
+++ b/session-1/script-container/Dockerfile
@@ -1,7 +1,8 @@
 FROM jupyter/scipy-notebook
 USER root
-COPY opt/ /opt/
 WORKDIR /opt/ml/code
+COPY opt/ml/code/requirements.txt .
 RUN pip install -r requirements.txt
+COPY opt/ /opt/
 ENTRYPOINT ["python3"]
 CMD ["deploy"]
