removed --no-cache-dir option
removed to enable caching

--- a/session-2/session-2_exer2/Dockerfile
+++ b/session-2/session-2_exer2/Dockerfile
@@ -4,7 +4,7 @@ RUN useradd -m app; \
     apt-get update && apt-get -y upgrade
 WORKDIR /home/app
 COPY opt/ml/code/requirements.txt .
-RUN python -m pip install --no-cache-dir -r requirements.txt
+RUN python -m pip install -r requirements.txt
 USER app
 COPY opt/ .
 ENTRYPOINT [ "python3"]
